Fixed footer alignment

--- a/jr-portfolio/src/Components/Contact/Contact.css
+++ b/jr-portfolio/src/Components/Contact/Contact.css
@@ -1,6 +1,8 @@
 a img{
     width: 50px;
     height: 50px;
+    padding: 0; 
+    
     
 }
 .contact{
@@ -8,15 +10,19 @@ a img{
     border: 4px solid #d9e1de;
     margin: 80px auto;
     width: 10vw;
-    height:5vh;
+    height: 5vh;
     border-radius: 25px;
 }
 .github{
     height: 40px;
     width:45px;
+    padding: 0;
+    margin-bottom: 5px;
+
 }
 footer{
-    
     position: relative;
     bottom: 0;
+    margin: 0 auto;
+    
 }
